[package]
name = "router-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ipnet = "2.8.0"
rand = "0.8.5"
rtnetlink = "0.13.1"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.11"

